--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/nemethricsi/github-actions-slack-test#readme",
   "dependencies": {
-    "dotenv": "^14.0.0"
+    "dotenv": "^14.0.0",
+    "slack-github-action": "github:slackapi/slack-github-action"
   }
 }
