--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thank you for raising an issue and making this repository better! <3 Ricsi'
-        pr-message: 'Thank you for raising a PR and making this repository better! <3 Ricsi'
+        issue-message: 'Thank you for raising an issue and making this repository better! ❤️ Ricsi'
+        pr-message: 'Thank you for raising a PR and making this repository better! ❤️ Ricsi'
