--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Message to slack
     steps:
-    - uses: slackapi/slack-github-action@v1.16.0
+    - name: slack-send
+    uses: slackapi/slack-github-action@v1.18.0
       with:
         payload: |
           {
