--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -14,7 +14,68 @@ jobs:
       with:
         payload: |
           {
-            "text": "Hello from GitHub action!"
+            "text": "Hello from GitHub action!",
+            "attachments": [
+              {
+                "color": "#f2c744",
+                "blocks": [
+                  {
+                    "type": "header",
+                    "text": {
+                      "type": "plain_text",
+                      "text": "New request",
+                      "emoji": true
+                    }
+                  },
+                  {
+                    "type": "section",
+                    "fields": [
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Type:*\nPaid Time Off"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Created by:*\n<example.com|Fred Enriquez>"
+                      }
+                    ]
+                  },
+                  {
+                    "type": "section",
+                    "fields": [
+                      {
+                        "type": "mrkdwn",
+                        "text": "*When:*\nAug 10 - Aug 13"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Type:*\nPaid time off"
+                      }
+                    ]
+                  },
+                  {
+                    "type": "section",
+                    "fields": [
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Hours:*\n16.0 (2 days)"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Remaining balance:*\n32.0 hours (4 days)"
+                      }
+                    ]
+                  },
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "<https://example.com|View request>"
+                    }
+                  }
+                ]
+              }
+            ]
           }
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
