--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -14,7 +14,6 @@ jobs:
       with:
         payload: |
           {
-            "text": "Hello from GitHub action!",
             "attachments": [
               {
                 "color": "#f2c744",
@@ -23,7 +22,7 @@ jobs:
                     "type": "header",
                     "text": {
                       "type": "plain_text",
-                      "text": "New request",
+                      "text": "New release 🚀",
                       "emoji": true
                     }
                   },
