--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -12,51 +12,42 @@ jobs:
       - name: slack-send
         uses: slackapi/slack-github-action@v1.18.0
         with:
-          payload: |
-            {
-              "text": "*New release on @polygence/components*",
-              "blocks": [
-                {
-                  "type": "header",
-                  "text": {
-                    "type": "plain_text",
-                    "text": "New release | @polygence/components",
-                    "emoji": true
-                  }
-                },
-                {
-                  "type": "section",
-                  "fields": [
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "*${{ github.event.release.tag_name }} :rocket:*"
-                    },
-                  ]
-                },
-                {
-                  "type": "section",
-                  "fields": [
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "${{ github.event.release.body }}"
-                    },
-                  ]
-                },
-                {
-                  "type": "context",
-                  "elements": [
-                    {
-                      "type": "image",
-                      "image_url": "${{ github.event.release.author.avatar_url }}",
-                      "alt_text": "author"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Created by:* <${{ github.event.release.html_url }}|view release>"
-                    }
+        payload: |
+          {
+            "channel": "dev-components-lib",
+            "text": "*New release on @polygence/components*",
+            "blocks": [
+              {
+                "type": "header",
+                "text": {
+                  "type": "plain_text",
+                  "text": "New release | @polygence/components",
+                  "emoji": true
+                }
+              },
+              {
+                "type": "section",
+                "text": {
+                  "type": "mrkdwn",
+                  "text": "*${{ github.event.release.tag_name }} :rocket:*"
+                }
+              },
+              {
+                "type": "context",
+                "elements": [
+                  {
+                    "type": "image",
+                    "image_url": "${{ github.event.release.author.avatar_url }}",
+                    "alt_text": "author"
                   },
+                  {
+                    "type": "mrkdwn",
+                    "text": "*Created by:* <${{ github.event.release.author.html_url }}|${{ github.event.release.author.login }}>"
+                  }
                 ]
               }
+            ]
+          }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
