--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -33,6 +33,13 @@ jobs:
                   }
                 },
                 {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "${{ github.event.release.body }}"
+                  }
+                },
+                {
                   "type": "context",
                   "elements": [
                     {
