rm release body

--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -33,13 +33,6 @@ jobs:
                   }
                 },
                 {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "${{ github.event.release.body }}"
-                  }
-                },
-                {
                   "type": "context",
                   "elements": [
                     {
@@ -49,7 +42,7 @@ jobs:
                     },
                     {
                       "type": "mrkdwn",
-                      "text": "*Created by:* <${{ github.event.release.author.html_url }}|${{ github.event.release.author.login }}>"
+                      "text": "*Created by:* <${{ github.event.release.author.html_url }}|${{ github.event.release.author.login }}> | Why not join <#C02P8SXPT5Y>?"
                     }
                   ]
                 }
