--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -36,7 +36,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": `${{ github.event.release.body }}`
+                    "text": "${{ github.event.release.body }}"
                   }
                 },
                 {
